--- a/Tables Moles/src/main/res/values/strings.xml
+++ b/Tables Moles/src/main/res/values/strings.xml
@@ -1,5 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!--
+<?xml version="1.0" encoding="utf-8"?><!--
  Copyright (C) 2010 ZXing authors
  Copyright 2011 Robert Theis
 
@@ -18,9 +17,9 @@
 <resources>
     <string name="app_name">Tabels Moles</string>
     <string name="title_activity_table_home">TableHome</string>
-    
+
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
-    
+
     <string name="action_settings">Settings</string>
 </resources>
