--- a/Tables Moles/src/main/res/values/strings.xml
+++ b/Tables Moles/src/main/res/values/strings.xml
@@ -15,256 +15,49 @@
  limitations under the License.
  -->
 <resources>
-    <string name="app_name">Tabels Moles</string>
+    <string name="app_name" translatable="false">Tabels Moles</string>
     <string name="title_activity_table_home">TableHome</string>
 
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
 
-    <string name="action_settings">Settings</string>
+    <string name="action_settings" translatable="false">Settings</string>
+    <string name="general_info">general info</string>
+    <string name="name">name</string>
+    <string name="atomic_number">atomic number</string>
+    <string name="atomic_mass">atomic mass</string>
+    <string name="type">type</string>
+    <string name="years_discover">year discover</string>
+    <string name="properties">Properties</string>
+    <string name="density">Density  ( g/mL)</string>
+    <string name="melting_point">Melting Point</string>
+    <string name="boiling_point">Boiling Point</string>
+    <string name="atomic_raduis">atomic raduis</string>
+    <string name="ion_raduis">ion_raduis</string>
+    <string name="bonding_type">Bonding Type</string>
+    <string name="oxidation_state">Oxidation_state</string>
+    <string name="Electromagnetic_Properties">Electromagnetic Properties</string>
+    <string name="electronic_configuration">electronic configuration :</string>
+    <string name="Pauling_electronegativity">Pauling electronegativity:</string>
+    <string name="Ionization_energy">Ionization Energy in kJ/mol :</string>
+    <string name="Activation_Energy">Activation Energy :</string>
+    <string name="Standered_State">Standered State :</string>
+    <string name="atomic_mass_def">the protons + neutrons of the nucleus.</string>
+    <string name="density_def">is defined as mass diveded by volume  (g/mL)</string>
+    <string name="melting_point_def">the degree when solic change to lequid</string>
+    <string name="boiling_point_def">the tempruture whic change the lequid to gas</string>
+    <string name="bonding_type_def">the type of forces (ionic bond, covalent bond and matalitic bond) by which atoms or ions are bound in a molecule or crystal</string>
+    <string name="atomic_raduis_def">the distance from the center of the nucleus to the boundary of the surrounding cloud of electrons</string>
+    <string name="ion_raduis_def">the distance from the center of the nucleus to the boundary of the surrounding cloud of electrons when it\'s ion</string>
+    <string name="electronic_conf_def">is the representation of the arrangement of electrons distributed among the orbital shells and subshells</string>
+    <string name="electromagnifity_def">the ability of an atom in a molecule to draw bonding electrons to itself</string>
+    <string name="ionizations_eng_def">the energy required to remove an electron from a neutral atom</string>
+    <string name="activation_eng_def">the energy required to remove an electron from a neutral atom</string>
+    <string name="wiki">wiki</string>
+    <string name="atomic_number_def">") is the number of protons found in the nucleus of an atom "</string>
+    <string name="Standered_State_def">the state of elements in 25 C and 1 atm pressure</string>
+    <string name="oxidation_def">oxidation def</string>
+    <string name="pauling_def">Pauling def</string>
 
-    <string-array name="countries_array">
-        <item>Kenya</item>
-        <item>Afghanistan</item>
-        <item>Albania</item>
-        <item>Algeria</item>
-        <item>American Samoa</item>
-        <item>Andorra</item>
-        <item>Angola</item>
-        <item>Anguilla</item>
-        <item>Antarctica</item>
-        <item>Antigua and Barbuda</item>
-        <item>Argentina</item>
-        <item>Armenia</item>
-        <item>Aruba</item>
-        <item>Australia</item>
-        <item>Austria</item>
-        <item>Azerbaijan</item>
-        <item>Bahrain</item>
-        <item>Bangladesh</item>
-        <item>Barbados</item>
-        <item>Belarus</item>
-        <item>Belgium</item>
-        <item>Belize</item>
-        <item>Benin</item>
-        <item>Bermuda</item>
-        <item>Bhutan</item>
-        <item>Bolivia</item>
-        <item>Bosnia and Herzegovina</item>
-        <item>Botswana</item>
-        <item>Bouvet Island</item>
-        <item>Brazil</item>
-        <item>British Indian Ocean Territory</item>
-        <item>British Virgin Islands</item>
-        <item>Brunei</item>
-        <item>Bulgaria</item>
-        <item>Burkina Faso</item>
-        <item>Burundi</item>
-        <item>Cambodia</item>
-        <item>Cameroon</item>
-        <item>Canada</item>
-        <item>Cape Verde</item>
-        <item>Cayman Islands</item>
-        <item>Central African Republic</item>
-        <item>Chad</item>
-        <item>Chile</item>
-        <item>China</item>
-        <item>Christmas Island</item>
-        <item>Cocos (Keeling) Islands</item>
-        <item>Colombia</item>
-        <item>Comoros</item>
-        <item>Congo</item>
-        <item>Cook Islands</item>
-        <item>Costa Rica</item>
-        <item>Cote d\'Ivoire</item>
-        <item>Croatia</item>
-        <item>Cuba</item>
-        <item>Cyprus</item>
-        <item>Czech Republic</item>
-        <item>Democratic Republic of the Congo</item>
-        <item>Denmark</item>
-        <item>Djibouti</item>
-        <item>Dominica</item>
-        <item>Dominican Republic</item>
-        <item>East Timor</item>
-        <item>Ecuador</item>
-        <item>Egypt</item>
-        <item>El Salvador</item>
-        <item>Equatorial Guinea</item>
-        <item>Eritrea</item>
-        <item>Estonia</item>
-        <item>Ethiopia</item>
-        <item>Faeroe Islands</item>
-        <item>Falkland Islands</item>
-        <item>Fiji</item>
-        <item>Finland</item>
-        <item>Former Yugoslav Republic of Macedonia</item>
-        <item>France</item>
-        <item>French Guiana</item>
-        <item>French Polynesia</item>
-        <item>French Southern Territories</item>
-        <item>Gabon</item>
-        <item>Georgia</item>
-        <item>Germany</item>
-        <item>Ghana</item>
-        <item>Gibraltar</item>
-        <item>Greece</item>
-        <item>Greenland</item>
-        <item>Grenada</item>
-        <item>Guadeloupe</item>
-        <item>Guam</item>
-        <item>Guatemala</item>
-        <item>Guinea</item>
-        <item>Guinea-Bissau</item>
-        <item>Guyana</item>
-        <item>Haiti</item>
-        <item>Heard Island and McDonald Islands</item>
-        <item>Honduras</item>
-        <item>Hong Kong</item>
-        <item>Hungary</item>
-        <item>Iceland</item>
-        <item>India</item>
-        <item>Indonesia</item>
-        <item>Iran</item>
-        <item>Iraq</item>
-        <item>Ireland</item>
-        <item>Israel</item>
-        <item>Italy</item>
-        <item>Jamaica</item>
-        <item>Japan</item>
-        <item>Jordan</item>
-        <item>Kazakhstan</item>
 
-        <item>Kiribati</item>
-        <item>Kuwait</item>
-        <item>Kyrgyzstan</item>
-        <item>Laos</item>
-        <item>Latvia</item>
-        <item>Lebanon</item>
-        <item>Lesotho</item>
-        <item>Liberia</item>
-        <item>Libya</item>
-        <item>Liechtenstein</item>
-        <item>Lithuania</item>
-        <item>Luxembourg</item>
-        <item>Macau</item>
-        <item>Madagascar</item>
-        <item>Malawi</item>
-        <item>Malaysia</item>
-        <item>Maldives</item>
-        <item>Mali</item>
-        <item>Malta</item>
-        <item>Marshall Islands</item>
-        <item>Martinique</item>
-        <item>Mauritania</item>
-        <item>Mauritius</item>
-        <item>Mayotte</item>
-        <item>Mexico</item>
-        <item>Micronesia</item>
-        <item>Moldova</item>
-        <item>Monaco</item>
-        <item>Mongolia</item>
-        <item>Montenegro</item>
-        <item>Montserrat</item>
-        <item>Morocco</item>
-        <item>Mozambique</item>
-        <item>Myanmar</item>
-        <item>Namibia</item>
-        <item>Nauru</item>
-        <item>Nepal</item>
-        <item>Netherlands</item>
-        <item>Netherlands Antilles</item>
-        <item>New Caledonia</item>
-        <item>New Zealand</item>
-        <item>Nicaragua</item>
-        <item>Niger</item>
-        <item>Nigeria</item>
-        <item>Niue</item>
-        <item>Norfolk Island</item>
-        <item>North Korea</item>
-        <item>Northern Marianas</item>
-        <item>Norway</item>
-        <item>Oman</item>
-        <item>Pakistan</item>
-        <item>Palau</item>
-        <item>Panama</item>
-        <item>Papua New Guinea</item>
-        <item>Paraguay</item>
-        <item>Peru</item>
-        <item>Philippines</item>
-        <item>Pitcairn Islands</item>
-        <item>Poland</item>
-        <item>Portugal</item>
-        <item>Puerto Rico</item>
-        <item>Qatar</item>
-        <item>Reunion</item>
-        <item>Romania</item>
-        <item>Russia</item>
-        <item>Rwanda</item>
-        <item>Sqo Tome and Principe</item>
-        <item>Saint Helena</item>
-        <item>Saint Kitts and Nevis</item>
-        <item>Saint Lucia</item>
-        <item>Saint Pierre and Miquelon</item>
-        <item>Saint Vincent and the Grenadines</item>
-        <item>Samoa</item>
-        <item>San Marino</item>
-        <item>Saudi Arabia</item>
-        <item>Senegal</item>
-        <item>Serbia</item>
-        <item>Seychelles</item>
-        <item>Sierra Leone</item>
-        <item>Singapore</item>
-        <item>Slovakia</item>
-        <item>Slovenia</item>
-        <item>Solomon Islands</item>
-        <item>Somalia</item>
-        <item>South Africa</item>
-        <item>South Georgia and the South Sandwich Islands</item>
-        <item>South Korea</item>
-        <item>South Sudan</item>
-        <item>Spain</item>
-        <item>Sri Lanka</item>
-        <item>Sudan</item>
-        <item>Suriname</item>
-        <item>Svalbard and Jan Mayen</item>
-        <item>Swaziland</item>
-        <item>Sweden</item>
-        <item>Switzerland</item>
-        <item>Syria</item>
-        <item>Taiwan</item>
-        <item>Tajikistan</item>
-        <item>Tanzania</item>
-        <item>Thailand</item>
-        <item>The Bahamas</item>
-        <item>The Gambia</item>
-        <item>Togo</item>
-        <item>Tokelau</item>
-        <item>Tonga</item>
-        <item>Trinidad and Tobago</item>
-        <item>Tunisia</item>
-        <item>Turkey</item>
-        <item>Turkmenistan</item>
-        <item>Turks and Caicos Islands</item>
-        <item>Tuvalu</item>
-        <item>Virgin Islands</item>
-        <item>Uganda</item>
-        <item>Ukraine</item>
-        <item>United Arab Emirates</item>
-        <item>United Kingdom</item>
-        <item>United States</item>
-        <item>United States Minor Outlying Islands</item>
-        <item>Uruguay</item>
-        <item>Uzbekistan</item>
-        <item>Vanuatu</item>
-        <item>Vatican City</item>
-        <item>Venezuela</item>
-        <item>Vietnam</item>
-        <item>Wallis and Futuna</item>
-        <item>Western Sahara</item>
-        <item>Yemen</item>
-        <item>Yugoslavia</item>
-        <item>Zambia</item>
-        <item>Zimbabwe</item>
-    </string-array>
 </resources>
