--- a/Tables Moles/src/main/res/values-ar/strings.xml
+++ b/Tables Moles/src/main/res/values-ar/strings.xml
@@ -10,28 +10,30 @@
     <string name="ion_raduis">نصف قطر الأيون</string>
     <string name="melting_point">درجة الذوبان</string>
     <string name="name">الاسم</string>
-    <string name="oxidation_state">حالة التأكسد</string>
+    <string name="oxidation_state">عدد التأكسد</string>
     <string name="properties">الخصائص</string>
     <string name="type">النوع</string>
     <string name="years_discover">سنة الاكتشاف</string>
-    <string name="Activation_Energy">طاقة التنشيط</string>
     <string name="Electromagnetic_Properties">الخصائص الالكترونية</string>
     <string name="Ionization_energy">طاقة التأيين</string>
-    <string name="Pauling_electronegativity">مقياس باولينج</string>
+    <string name="Pauling_electronegativity">السالبية الكهربائية</string>
     <string name="electronic_configuration">التوزيع الإلكتروني</string>
     <string name="Standered_State">الحالة الطبيعية</string>
-    <string name="atomic_mass_def">مجموع النيتورونات والبروتونات في النواة</string>
-    <string name="density_def">هي كم  جرام موحود في ملي لتر</string>
-    <string name="melting_point_def">درجة الحرارة اللازمة لتغيي المادةر من صلب إلى سائل</string>
+    <string name="atomic_mass_def">الكتلة المولية الذرية أو الجزيئية لجسم خالص هي كتلة مول واحد من ذرات أو جزيئات هذا الجسم .</string>
+    <string name="density_def">"هي النسبة بين الكتلة والحجم "</string>
+    <string name="melting_point_def">درجة الحرارة اللازمة لتغيير المادة من صلب إلى سائل</string>
     <string name="boiling_point_def">درجة الحرارة اللازمة لتحويل سائل إلى غاز</string>
     <string name="bonding_type_def">"نوع الرابطة المتكونة بين الذرات من نفس النوع (ايونية٫ تساهمية) "</string>
     <string name="atomic_raduis_def">عبارة عن نصف قطر الذرة في حالة الاستقرار</string>
     <string name="ion_raduis_def">عبارة عن نصف قطر الذرة عندما يكون آيون</string>
-    <string name="electronic_conf_def"></string>
-    <string name="electromagnifity_def">" "</string>
+    <string name="electronic_conf_def">\"التوزيع الإلكتروني هو ترتيب الإلكترونات في الذرة، أو في جزيء . و مكان تواجد الإلكترونات في المدارات الذرية  \"</string>
+    <string name="electromagnifity_def">السالبية الكهربائيه</string>
     <string name="ionizations_eng_def">الطاقة اللازمة لنزع إلكترون</string>
     <string name="activation_eng_def">الطاقة اللازمة لبدأ التفاعل الكيميائي</string>
     <string name="wiki">ويكي</string>
     <string name="atomic_number_def">ليمثل عدد البروتونات الموجودة في نواة الذرة</string>
     <string name="Standered_State_def">حالة العنصر في الظروف الطبيعية</string>
+    <string name="Activation_Energy">طاقة التنشيط</string>
+    <string name="pauling_def" translatable="false">قدرة العنصر على جذب الإلكترونات</string>
+    <string name="oxidation_def" translatable="false">عدد التأكسد هو عدد الإلكترونات المفقوردة أو المكتسبة لذرة عنصر ما</string>
 </resources>
